// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "RelativePrice" with no props 1`] = `
<div>
  <span
    class="sc-bdVaJa RIHUz"
  >
    €
  </span>
  <span
    class="sc-bdVaJa RIHUz"
  >
    €
  </span>
  <span
    class="sc-bdVaJa RIHUz"
  >
    €
  </span>
  <span
    class="sc-bdVaJa RIHUz"
  >
    €
  </span>
</div>
`;

exports[`renders "RelativePrice" with price of 2 1`] = `
<div>
  <span
    class="sc-bdVaJa cNARee"
  >
    €
  </span>
  <span
    class="sc-bdVaJa cNARee"
  >
    €
  </span>
  <span
    class="sc-bdVaJa RIHUz"
  >
    €
  </span>
  <span
    class="sc-bdVaJa RIHUz"
  >
    €
  </span>
</div>
`;

exports[`renders "RelativePrice" with price of 2 and using dollar currency 1`] = `
<div>
  <span
    class="sc-bdVaJa cNARee"
  >
    $
  </span>
  <span
    class="sc-bdVaJa cNARee"
  >
    $
  </span>
  <span
    class="sc-bdVaJa cNARee"
  >
    $
  </span>
  <span
    class="sc-bdVaJa RIHUz"
  >
    $
  </span>
</div>
`;
